[package]
name = "hxgm30-noise"
description = "Noise-generation for use in hexagram30 projects"
readme = "README.md"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Duncan McGreggor <duncan@cnbb.games>"]
repository = "https://github.com/hexagram30/noise"
documentation = "https://docs.rs/hxgm30-noise/"
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2018"

[lib]
name = "hxgm30noise"

[dependencies]
ansi_term = "0.12.1"
clap = "2.33"
image-data = "0.2.0"
log = "0.4.8"
noise = "0.6.0"
twyg = "0.1.7"

[[example]]
name = "caves"
