[package]
name = "hxgm30-noise"
description = "Noise-generation for use in hexagram30 projects"
readme = "README.md"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Duncan McGreggor <duncan@cnbb.games>"]
repository = "https://github.com/hexagram30/noise"
documentation = "https://docs.rs/hxgm30-noise/"
exclude = ["/.github", "/resources", ".gitignore", "/assets"]
edition = "2018"

[lib]
name = "hxgm30noise"

[dependencies]
nu-ansi-term = "0.46.0"
clap = "2.34"
image-data = "0.2.0"
log = "0.4.8"
noise = "0.6.0"
#noise = {version="0.8.2", features=["images"]}
twyg = "0.1.10"

[[example]]
name = "caves"
